Letux: update kernel versions.html
Signed-off-by: H. Nikolaus Schaller <hns@goldelico.com>

--- a/Letux/versions.html
+++ b/Letux/versions.html
@@ -5,20 +5,17 @@ Update versions table
 </tr>
 <tr>
 <td>rc (latest/alpha):</td>
-<td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-6.16-rc6">6.16-rc6</a></td>
-<td><a href="http://download.goldelico.com/letux-kernel/letux-6.16-rc6/src/CHANGES">changes</a></td>
-<td>2025-07-14</td>
+<td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-6.17-rc7">6.17-rc7</a></td>
+<td><a href="http://download.goldelico.com/letux-kernel/letux-6.17-rc7/src/CHANGES">changes</a></td>
+<td>2025-09-23</td>
 <td>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.16-rc6">arm</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.16-rc6-arm64">arm64</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.16-rc6-ci20">CI20(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.16-rc6-i386">x86</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.16-rc6-l400">L400(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.16-rc6-lpae">arm+lpae</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.16-rc6-lx16">LX16(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.16-rc6-lx20">LX20(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.16-rc6-mips">mips</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.16-rc6-replicant">replicant-arm</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.17-rc7">arm</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.17-rc7-arm64">arm64</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.17-rc7-i386">x86</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.17-rc7-l400">L400(mips)</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.17-rc7-lpae">arm+lpae</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.17-rc7-mips">mips</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.17-rc7-replicant">replicant-arm</a>
 </td>
 <td>
 For alpha test: develop and test new features
@@ -26,20 +23,35 @@ For alpha test: develop and test new features
 </tr>
 <tr>
 <td>mainline (beta):</td>
-<td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-6.15.6">6.15.6</a></td>
-<td><a href="http://download.goldelico.com/letux-kernel/letux-6.15.6/src/CHANGES">changes</a></td>
-<td>2025-07-14</td>
+<td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-6.16.8">6.16.8</a></td>
+<td><a href="http://download.goldelico.com/letux-kernel/letux-6.16.8/src/CHANGES">changes</a></td>
+<td>2025-09-23</td>
 <td>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.15.6">arm</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.15.6-arm64">arm64</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.15.6-ci20">CI20(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.15.6-i386">x86</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.15.6-l400">L400(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.15.6-lpae">arm+lpae</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.15.6-lx16">LX16(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.15.6-lx20">LX20(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.15.6-mips">mips</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.15.6-replicant">replicant-arm</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.16.8">arm</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.16.8-arm64">arm64</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.16.8-i386">x86</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.16.8-l400">L400(mips)</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.16.8-lpae">arm+lpae</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.16.8-mips">mips</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.16.8-replicant">replicant-arm</a>
+</td>
+<td>
+multi-platform, mature enough for daily use<br>supports OpenPandora, GTA04, Letux Cortex 8, BeagleBoard, BeagleBone, PocketBeagle, PandaBoard, OMAP5EVM, Pyra, Udoo neo, RasPi 3B+, CI20, PinePhone, Kobo/Tolino, SAMA5, LX16
+</td>
+</tr>
+<tr>
+<td>mainline EOL:</td>
+<td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-6.15.11">6.15.11</a></td>
+<td><a href="http://download.goldelico.com/letux-kernel/letux-6.15.11/src/CHANGES">changes</a></td>
+<td>2025-08-22</td>
+<td>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.15.11">arm</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.15.11-arm64">arm64</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.15.11-i386">x86</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.15.11-l400">L400(mips)</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.15.11-lpae">arm+lpae</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.15.11-mips">mips</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.15.11-replicant">replicant-arm</a>
 </td>
 <td>
 multi-platform, mature enough for daily use<br>supports OpenPandora, GTA04, Letux Cortex 8, BeagleBoard, BeagleBone, PocketBeagle, PandaBoard, OMAP5EVM, Pyra, Udoo neo, RasPi 3B+, CI20, PinePhone, Kobo/Tolino, SAMA5, LX16
@@ -47,19 +59,17 @@ multi-platform, mature enough for daily use<br>supports OpenPandora, GTA04, Letu
 </tr>
 <tr>
 <td>mainline (beta):</td>
-<td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-6.12.37">6.12.37</a></td>
-<td><a href="http://download.goldelico.com/letux-kernel/letux-6.12.37/src/CHANGES">changes</a></td>
-<td>2025-07-14</td>
+<td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-6.12.48">6.12.48</a></td>
+<td><a href="http://download.goldelico.com/letux-kernel/letux-6.12.48/src/CHANGES">changes</a></td>
+<td>2025-09-23</td>
 <td>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.12.37">arm</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.12.37-arm64">arm64</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.12.37-ci20">CI20(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.12.37-i386">x86</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.12.37-l400">L400(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.12.37-lpae">arm+lpae</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.12.37-lx16">LX16(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.12.37-mips">mips</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.12.37-replicant">replicant-arm</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.12.48">arm</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.12.48-arm64">arm64</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.12.48-i386">x86</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.12.48-l400">L400(mips)</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.12.48-lpae">arm+lpae</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.12.48-mips">mips</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.12.48-replicant">replicant-arm</a>
 </td>
 <td>
 multi-platform, mature enough for daily use<br>supports OpenPandora, GTA04, Letux Cortex 8, BeagleBoard, BeagleBone, PocketBeagle, PandaBoard, OMAP5EVM, Pyra, Udoo neo, RasPi 3B+, CI20, PinePhone, Kobo/Tolino, SAMA5, LX16
@@ -67,19 +77,17 @@ multi-platform, mature enough for daily use<br>supports OpenPandora, GTA04, Letu
 </tr>
 <tr>
 <td>stable master:</td>
-<td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-6.6.97">6.6.97</a></td>
-<td><a href="http://download.goldelico.com/letux-kernel/letux-6.6.97/src/CHANGES">changes</a></td>
-<td>2025-07-15</td>
+<td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-6.6.107">6.6.107</a></td>
+<td><a href="http://download.goldelico.com/letux-kernel/letux-6.6.107/src/CHANGES">changes</a></td>
+<td>2025-09-24</td>
 <td>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.6.97">arm</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.6.97-arm64">arm64</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.6.97-ci20">CI20(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.6.97-i386">x86</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.6.97-l400">L400(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.6.97-lpae">arm+lpae</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.6.97-lx16">LX16(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.6.97-mips">mips</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.6.97-replicant">replicant-arm</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.6.107">arm</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.6.107-arm64">arm64</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.6.107-i386">x86</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.6.107-l400">L400(mips)</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.6.107-lpae">arm+lpae</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.6.107-mips">mips</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.6.107-replicant">replicant-arm</a>
 </td>
 <td>
 multi-platform, mature enough for daily use<br>supports OpenPandora, GTA04, Letux Cortex 8, BeagleBoard, BeagleBone, PocketBeagle, PandaBoard, OMAP5EVM, Pyra, Udoo neo, RasPi 3B+, CI20, PinePhone, Kobo/Tolino, SAMA5, LX16
@@ -87,18 +95,17 @@ multi-platform, mature enough for daily use<br>supports OpenPandora, GTA04, Letu
 </tr>
 <tr>
 <td>longterm (beta):</td>
-<td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-6.1.144">6.1.144</a></td>
-<td><a href="http://download.goldelico.com/letux-kernel/letux-6.1.144/src/CHANGES">changes</a></td>
-<td>2025-07-15</td>
+<td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-6.1.153">6.1.153</a></td>
+<td><a href="http://download.goldelico.com/letux-kernel/letux-6.1.153/src/CHANGES">changes</a></td>
+<td>2025-09-24</td>
 <td>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.1.144">arm</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.1.144-arm64">arm64</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.1.144-ci20">CI20(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.1.144-i386">x86</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.1.144-l400">L400(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.1.144-lpae">arm+lpae</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.1.144-mips">mips</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-6.1.144-replicant">replicant-arm</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.1.153">arm</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.1.153-arm64">arm64</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.1.153-i386">x86</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.1.153-l400">L400(mips)</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.1.153-lpae">arm+lpae</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.1.153-mips">mips</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-6.1.153-replicant">replicant-arm</a>
 </td>
 <td>
 multi-platform, mature enough for daily use<br>supports OpenPandora, GTA04, Letux Cortex 8, BeagleBoard, BeagleBone, PocketBeagle, PandaBoard, OMAP5EVM, Pyra, Udoo neo, RasPi 3B+, CI20, PinePhone, Kobo/Tolino, SAMA5
@@ -106,18 +113,17 @@ multi-platform, mature enough for daily use<br>supports OpenPandora, GTA04, Letu
 </tr>
 <tr>
 <td>longterm (beta):</td>
-<td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-5.15.187">5.15.187</a></td>
-<td><a href="http://download.goldelico.com/letux-kernel/letux-5.15.187/src/CHANGES">changes</a></td>
-<td>2025-07-15</td>
+<td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-5.15.193">5.15.193</a></td>
+<td><a href="http://download.goldelico.com/letux-kernel/letux-5.15.193/src/CHANGES">changes</a></td>
+<td>2025-09-24</td>
 <td>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.15.187">arm</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.15.187-arm64">arm64</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.15.187-ci20">CI20(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.15.187-i386">x86</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.15.187-l400">L400(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.15.187-lpae">arm+lpae</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.15.187-mips">mips</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.15.187-replicant">replicant-arm</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.15.193">arm</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.15.193-arm64">arm64</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.15.193-i386">x86</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.15.193-l400">L400(mips)</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.15.193-lpae">arm+lpae</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.15.193-mips">mips</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.15.193-replicant">replicant-arm</a>
 </td>
 <td>
 multi-platform, mature enough for daily use<br>supports OpenPandora, GTA04, Letux Cortex 8, BeagleBoard, BeagleBone, PocketBeagle, PandaBoard, OMAP5EVM, Pyra, Udoo neo, RasPi 3B+, CI20, PinePhone, Kobo/Tolino
@@ -125,18 +131,17 @@ multi-platform, mature enough for daily use<br>supports OpenPandora, GTA04, Letu
 </tr>
 <tr>
 <td>longterm (beta):</td>
-<td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-5.10.239">5.10.239</a></td>
-<td><a href="http://download.goldelico.com/letux-kernel/letux-5.10.239/src/CHANGES">changes</a></td>
-<td>2025-07-03</td>
+<td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-5.10.244">5.10.244</a></td>
+<td><a href="http://download.goldelico.com/letux-kernel/letux-5.10.244/src/CHANGES">changes</a></td>
+<td>2025-09-25</td>
 <td>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.10.239">arm</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.10.239-arm64">arm64</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.10.239-ci20">CI20(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.10.239-i386">x86</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.10.239-l400">L400(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.10.239-lpae">arm+lpae</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.10.239-mips">mips</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.10.239-replicant">replicant-arm</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.10.244">arm</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.10.244-arm64">arm64</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.10.244-i386">x86</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.10.244-l400">L400(mips)</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.10.244-lpae">arm+lpae</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.10.244-mips">mips</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.10.244-replicant">replicant-arm</a>
 </td>
 <td>
 multi-platform, mature enough for daily use<br>supports OpenPandora, GTA04, Letux Cortex 8, BeagleBoard, BeagleBone, PocketBeagle, PandaBoard, OMAP5EVM, Pyra, Udoo neo, RasPi 3B+, CI20, PinePhone, Kobo/Tolino
@@ -144,16 +149,15 @@ multi-platform, mature enough for daily use<br>supports OpenPandora, GTA04, Letu
 </tr>
 <tr>
 <td>longterm (old):</td>
-<td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-5.4.295">5.4.295</a></td>
-<td><a href="http://download.goldelico.com/letux-kernel/letux-5.4.295/src/CHANGES">changes</a></td>
-<td>2025-07-03</td>
+<td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-5.4.299">5.4.299</a></td>
+<td><a href="http://download.goldelico.com/letux-kernel/letux-5.4.299/src/CHANGES">changes</a></td>
+<td>2025-09-25</td>
 <td>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.4.295">arm</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.4.295-ci20">CI20(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.4.295-l400">L400(mips)</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.4.295-lpae">arm+lpae</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.4.295-mips">mips</a>
-<a href="http://download.goldelico.com/letux-kernel/letux-5.4.295-replicant">replicant-arm</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.4.299">arm</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.4.299-l400">L400(mips)</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.4.299-lpae">arm+lpae</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.4.299-mips">mips</a>
+<a href="http://download.goldelico.com/letux-kernel/letux-5.4.299-replicant">replicant-arm</a>
 </td>
 <td>
 multi-platform, mature enough for daily use<br>supports OpenPandora, GTA04, Letux Cortex 8, BeagleBoard, BeagleBone, PocketBeagle, PandaBoard, OMAP5EVM, Pyra, Udoo neo, RasPi 3B+
@@ -163,7 +167,7 @@ multi-platform, mature enough for daily use<br>supports OpenPandora, GTA04, Letu
 <td>rolling (stable):</td>
 <td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-rolling-stable">rolling-stable</a></td>
 <td><a href="http://download.goldelico.com/letux-kernel/letux-rolling-stable/src/CHANGES">changes</a></td>
-<td>2025-07-15</td>
+<td>2025-09-26</td>
 <td>
 <a href="http://download.goldelico.com/letux-kernel/letux-rolling-stable">arm</a>
 <a href="http://download.goldelico.com/letux-kernel/letux-rolling-stable-arm64">arm64</a>
@@ -185,7 +189,7 @@ multi-platform, mature enough for daily use<br>supports OpenPandora, GTA04, Letu
 <td>rolling (lts):</td>
 <td><a href="http://git.goldelico.com/?p=letux-kernel.git;a=shortlog;h=letux-rolling-lts">rolling-lts</a></td>
 <td><a href="http://download.goldelico.com/letux-kernel/letux-rolling-lts/src/CHANGES">changes</a></td>
-<td>2025-07-15</td>
+<td>2025-09-26</td>
 <td>
 <a href="http://download.goldelico.com/letux-kernel/letux-rolling-lts">arm</a>
 <a href="http://download.goldelico.com/letux-kernel/letux-rolling-lts-arm64">arm64</a>
